# Amline_plus_codex

./: .gitattributes  .gitignore  ARTIFACT_POLICY.md  CONTRIBUTING.md  README.md  REPOSITORY_BOUNDARIES.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: arbitrations.py  auth.py  contracts.py  documents.py  notifications.py  payments.py  users.py  wallet.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  models.py  session.py
backend/app/models/: audit_log.py  contract.py  payment.py  user.py  wallet.py
backend/app/schemas/: notification.py  user.py  wallet.py
backend/app/services/: notification_queue.py  otp.py  wallet_ledger.py
backend/app/templates/: contract.mustache
backend/app/workers/: notification_worker.py
backend/tests/: test_arbitration_summary.py  test_arbitration_workflow.py  test_notifications_dlq.py  test_notifications_queue.py  test_phase3.py  test_smoke.py  test_wallet_payments.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/[...path]/: route.ts
frontend/app/app/: error.tsx  layout.tsx  page.tsx
frontend/app/app/admin/: page.tsx
frontend/app/app/analytics/: page.tsx
frontend/app/app/arbitrations/: page.tsx
frontend/app/components/: AppSidebar.tsx  AuthGate.tsx
frontend/app/lib/: api.ts  domPatch.ts
scripts/: open_edge_safe.ps1
(+6 files in other folders)
