[project]
name = "amline-backend"
version = "0.1.0"
description = "Amline PropTech backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.2.1",
  "alembic>=1.13.2",
  "redis>=5.0.7",
  "python-jose[cryptography]>=3.3.0",
  "boto3>=1.34.150",
  "pystache>=0.6.5",
  "tenacity>=8.4.2"
]

[tool.alembic]
script_location = "alembic"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"

